--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,15 @@
     </head>
     <body>
         <nav>
+            <ul id="user-account">
+                <li><a href="/signup">sign up</a></li>
+                <li><a href="/login">login</a></li>
+                <li><a href="/logout">logout</a></li>
+            </ul>
             <ul>
                 <li><a href="/">home</a></li>
                 <li><a href="/blog">all posts</a></li>
                 <li><a href="/blog/newpost">new post</a></li>
-                <li><a href="/login">login</a></li>
-                <li><a href="/logout">logout</a></li>
             </ul>
         </nav>
         {% block content %}
