--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,7 +10,7 @@
 <p>{{ post.body }}</p>
 <!-- TODO add author w/ link to author's blog page -->
 <p class="post-author">
-    written on {{ post.created.strftime('%Y-%m-%d') }} by <a href="/blog/{{ post.author.username }}">{{ post.author.username }}</a>
+    written by <a href="/blog/{{ post.author.username }}">{{ post.author.username }}</a>
 </p>
 
 {% endfor %}
